Added some more content to the HTML page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Welcome to Web Development!</h1>
     <p>This is my first HTML page.</p>
+    <h2>Web Development</h2>
+    <p>Below is an image of a computer</p>
+    <img src="https://images.pexels.com/photos/38568/apple-imac-ipad-workplace-38568.jpeg" width="640" height="425">
 </body>
 </html>
