contribution with anchor tag

--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
+    <style>
+        a:link {
+            color: blue;
+            background-color: transparent;
+            text-decoration: none;
+            font-size: 70px;
+            color: black;
+            text-decoration: underline;
+            margin-left: 140px;
+            font-weight: 800;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to Web Development!</h1>
+    <a href="about_us.html">About</a>  
     <p>This is my first HTML page.</p>
     <h2>Web Development</h2>
     <p>Below is an image of a computer</p>
     <img src="https://images.pexels.com/photos/38568/apple-imac-ipad-workplace-38568.jpeg" width="640" height="425">
+    <div>
+    </div>
 </body>
 </html>
