--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
             background-color: transparent;
             text-decoration: none;
             font-size: 70px;
-            color: black;
-            text-decoration: underline;
+            color: blue;
             margin-left: 140px;
             font-weight: 800;
+        }
+
+        a:hover {
+            color: red;
+            background-color: transparent;
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <h1>Welcome to Web Development!</h1>
-    <a href="about_us.html">About</a>  
+    <a href="contributor.html">Click to See The Contributor</a>  
     <p>This is my first HTML page.</p>
     <h2>Web Development</h2>
     <p>Below is an image of a computer</p>
